--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
-    "immer": "^10.1.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "rollup": "^4.52.5",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.4.5",
-    "vite": "^5.4.2"
+    "vite": "^7.1.12"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.52.5"
   }
 }
